--- a/stories/footer.css
+++ b/stories/footer.css
@@ -6,7 +6,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 170%;
-  margin: auto;
+  margin: 62px auto;
   text-align: center;
   width: 324px;
 }
@@ -15,6 +15,7 @@
 @media screen and (min-width: 720px) {
   .footer {
     font-size: 16px;
+    margin: 80px auto 62px;
     width: 430px;
   }
 }
@@ -23,6 +24,7 @@
 @media screen and (min-width: 1120px) {
   .footer {
     font-size: 18px;
+    margin: 100px auto 62px;
     width: 485px;
   }
 }
